--- a/trunk/Resources/Common/explosion_fire.plist
+++ b/trunk/Resources/Common/explosion_fire.plist
@@ -3,111 +3,113 @@
 <plist version="1.0">
 <dict>
 	<key>angle</key>
-	<real>90</real>
+	<real>0</real>
 	<key>angleVariance</key>
-	<real>5</real>
+	<real>180</real>
 	<key>blendFuncDestination</key>
 	<integer>1</integer>
 	<key>blendFuncSource</key>
 	<integer>770</integer>
 	<key>duration</key>
-	<real>-1</real>
+	<real>0.1</real>
 	<key>emitterType</key>
 	<integer>0</integer>
 	<key>finishColorAlpha</key>
-	<real>0.098039217293262482</real>
+	<real>1</real>
 	<key>finishColorBlue</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>finishColorGreen</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>finishColorRed</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>finishColorVarianceAlpha</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>finishColorVarianceBlue</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>finishColorVarianceGreen</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>finishColorVarianceRed</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>finishParticleSize</key>
-	<real>20</real>
+	<real>-1</real>
 	<key>finishParticleSizeVariance</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>gravityx</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>gravityy</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>maxParticles</key>
-	<integer>250</integer>
+	<integer>100</integer>
 	<key>maxRadius</key>
-	<real>0.0</real>
+	<real>108.8000030517578</real>
 	<key>maxRadiusVariance</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>minRadius</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>minRadiusVariance</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>particleLifespan</key>
-	<real>1.5</real>
+	<real>0.5</real>
 	<key>particleLifespanVariance</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>radialAccelVariance</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>radialAcceleration</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>rotatePerSecond</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>rotatePerSecondVariance</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>rotationEnd</key>
-	<real>0.0</real>
+	<real>360</real>
 	<key>rotationEndVariance</key>
-	<real>0.0</real>
+	<real>360</real>
 	<key>rotationIsDir</key>
 	<false/>
 	<key>rotationStart</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>rotationStartVariance</key>
-	<real>180</real>
+	<real>0</real>
 	<key>sourcePositionVariancex</key>
-	<real>15</real>
+	<real>5</real>
 	<key>sourcePositionVariancey</key>
-	<real>0.0</real>
+	<real>5</real>
 	<key>sourcePositionX</key>
-	<real>179.69354248046875</real>
+	<real>175.7000732421875</real>
 	<key>sourcePositionY</key>
-	<real>266.22207641601562</real>
+	<real>482.8660278320312</real>
 	<key>speed</key>
-	<real>60</real>
+	<real>85</real>
 	<key>speedVariance</key>
 	<real>20</real>
 	<key>startColorAlpha</key>
 	<real>1</real>
 	<key>startColorBlue</key>
-	<real>0.17254902422428131</real>
+	<real>0.0784313753247261</real>
 	<key>startColorGreen</key>
-	<real>0.14117647707462311</real>
+	<real>0.08235294371843338</real>
 	<key>startColorRed</key>
-	<real>0.56862747669219971</real>
+	<real>0.615686297416687</real>
 	<key>startColorVarianceAlpha</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>startColorVarianceBlue</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>startColorVarianceGreen</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>startColorVarianceRed</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>startParticleSize</key>
-	<real>30</real>
+	<real>35</real>
 	<key>startParticleSizeVariance</key>
-	<real>0.0</real>
+	<real>10</real>
 	<key>tangentialAccelVariance</key>
-	<real>0.0</real>
+	<real>0</real>
 	<key>tangentialAcceleration</key>
-	<real>0.0</real>
+	<real>150</real>
 	<key>textureFileName</key>
 	<string>explosion_fire.png</string>
+	<key>textureImageData</key>
+	<string></string>
 	<key>yCoordFlipped</key>
 	<integer>1</integer>
 </dict>
